Fast serialization with FST and java 1.8